--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,15 @@
 body {
   font-family: 'Nunito Sans', sans-serif;
-  }
+}
+
 .container{
   max-width: 1180px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+header {
+  border-bottom: 1px solid #dedede; 
 }
 .header {
   font-family: 'Open Sans', sans-serif;
@@ -26,14 +30,17 @@ body {
 .header-nav {
   list-style-type: none;
   display: flex;
-  padding-left: 0;
-  gap: 46px;
+  margin-left: -135px;
+  gap: 47px;
 }
 .header-nav a {
   font-weight: 600;
   font-size: 20px;
   color: #443737;
   text-decoration: none;
+}
+.header-nav a:hover {
+  color: #FFC725;
 }
 .header-nav a::after {
   content: '';
@@ -52,6 +59,7 @@ body {
   border: none;
   padding: 0;
   gap: 10px;
+  cursor: pointer;
 }
 .button-item {
   position: relative;
@@ -82,26 +90,34 @@ body {
   background-image: url(../images/bg.jpg);
   background-size: cover;
   background-position: center center;
-  padding: 145px 0;
+  padding: 151px 0;
+  margin-bottom: 140px;
 }
 .breadcrumbs {
   padding-left: 0;
-  margin-top: 0;
+  margin-top: -8px;
   list-style-type: none;
   display: flex;
   justify-content: center;
-  gap: 16px;
-  }
+  gap: 7px;
+}
 .breadcrumbs a {
   color: #ffffff;
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
   text-decoration: none;
 }
+.breadcrumbs a:hover{
+  color: #FFC725;
+}
 .breadcrumbs a::before {
   content: '/';
   position: relative;
-  left: -7px;
+  left: -3px;
+  pointer-events: none;
+}
+.breadcrumbs a:hover::before {
+  color: #dedede;
 }
 .breadcrumbs li:first-child a::before {
   display: none;
@@ -118,5 +134,98 @@ body {
   line-height: 1.5;
   color: #FAF9F9;
   max-width: 320px;
-  margin: 0 auto;
+  margin: 20px auto -7px;
+}
+.banner-box {
+  background-image: url(../images/banner_1.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  padding: 100px 100px 120px;
+  margin-bottom: 103px;
+}
+.banner-link {
+  font-weight: bold;
+  color: #1E2F40;
+  font-size: 14px;
+  border-radius: 5px;
+  background-color: #FBB731;
+  padding: 20px 25px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.banner-title {
+  font-size: 60px;
+  font-weight: 900;
+  color: #ffffff;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.banner-title span {
+  display: block;
+  max-width: 96px;
+  text-align: center;
+  margin-bottom: 9px;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: #F37335;
+  border-radius: 14px;
+  padding: 5px 0; 
+}
+.banner-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #FAF9F9;
+  max-width: 311px;
+  margin-bottom: 35px;
+  margin-top: 0;
+  line-height: 1.6;
+}
+.menu-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu-title {
+  font-family: 'Nunito Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  text-transform: uppercase;
+  color: #1B2A49;
+  margin: 0;
+}
+.menu-select {
+  border: 1px solid #DEDEDE;
+  border-radius: 22px;
+  padding: 13px 30px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #443737;
+  appearance: none;
+  flex-basis: 279px;
+  background-image: url(../images/arrow.svg);
+  background-size: 12.79px 7.75px;
+  background-repeat: no-repeat;
+  background-position: 89% center;
+}
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+.menu-grid-cover {
+width: 100%;
+height: 430px;
+position: relative;
+overflow: hidden;
+}
+.menu-grid-cover img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
 }
