--- a/styles/main.css
+++ b/styles/main.css
@@ -212,11 +212,13 @@ header {
   background-position: 89% center;
 }
 .menu-grid {
+  margin-top: -10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 .menu-grid-cover {
+margin-top: 50px;
 width: 100%;
 height: 430px;
 position: relative;
@@ -228,4 +230,7 @@ overflow: hidden;
   top: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
+}
+.menu-grid-text {
+text-align: center;
 }
