--- a/styles/main.css
+++ b/styles/main.css
@@ -162,12 +162,12 @@ header {
   margin-bottom: 12px;
 }
 .banner-title span {
+  font-family: 'Open Sans', sans-serif;
   display: block;
   max-width: 96px;
   text-align: center;
   margin-bottom: 9px;
   font-size: 14px;
-  font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   text-transform: uppercase;
   background-color: #F37335;
@@ -187,9 +187,9 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 37px;
 }
 .menu-title {
-  font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 700;
   font-size: 44px;
@@ -212,13 +212,13 @@ header {
   background-position: 89% center;
 }
 .menu-grid {
-  margin-top: -10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  text-align: center;
+  gap: 50px 20px;
+  margin-bottom: 100px;
 }
 .menu-grid-cover {
-margin-top: 50px;
 width: 100%;
 height: 430px;
 position: relative;
@@ -230,7 +230,46 @@ overflow: hidden;
   top: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
+  text-align: center;
+}
+.menu-grid-title {
+  color: #1B2A49;
+  font-size: 30px;
+  font-weight: 600;
+  margin: 0;
+}
+.menu-grid-price {
+  color: #979797;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 8px;
+  margin-bottom: 22px;
 }
 .menu-grid-text {
+  color: #1E2F40;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.menu-grid-icon {
+  background-image: url(../images/cart-menu.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  width: 18px;
+  height: 18px;
+}
+.menu-grid-btn {
+  background-color: #FBB731;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 32px;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 9px;
+ }
+ .menu-grid-item {
+ margin: auto;
+ display: block;
 }
