--- a/styles/main.css
+++ b/styles/main.css
@@ -236,19 +236,20 @@ overflow: hidden;
   color: #1B2A49;
   font-size: 30px;
   font-weight: 600;
-  margin: 0;
+  margin-top: 20px;
+  margin-bottom: -10px;
+  margin-left: 5px;
 }
 .menu-grid-price {
   color: #979797;
   font-size: 20px;
   font-weight: 700;
-  margin-top: 8px;
-  margin-bottom: 22px;
+  margin-bottom: 23px;
 }
 .menu-grid-text {
   color: #1E2F40;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
 }
 .menu-grid-icon {
@@ -260,6 +261,11 @@ overflow: hidden;
   height: 18px;
 }
 .menu-grid-btn {
+  display: block;
+  margin: auto;
+  font-size: 14px;
+  color: #1E2F40;
+  font-weight: 70;
   background-color: #FBB731;
   border: none;
   border-radius: 5px;
@@ -268,8 +274,7 @@ overflow: hidden;
   align-items: center;
   justify-content: center;
   gap: 9px;
- }
-.menu-grid-item {
- margin: auto;
- display: block;
 }
+  
+ 
+ 
