--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,12 @@ header {
   padding-top: 26px;
   padding-bottom: 25px;
 }
+.header-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 69%;
+}
 .header-logo {
   display: block;
   background-image: url(../images/logo.svg);
@@ -30,7 +36,6 @@ header {
 .header-nav {
   list-style-type: none;
   display: flex;
-  margin-left: -135px;
   gap: 47px;
 }
 .header-nav a {
@@ -60,6 +65,10 @@ header {
   padding: 0;
   gap: 10px;
   cursor: pointer;
+}
+.menu-grid-btn:hover {
+  cursor: pointer;
+  background-color: #F37335;
 }
 .button-item {
   position: relative;
@@ -150,9 +159,14 @@ header {
   font-size: 14px;
   border-radius: 5px;
   background-color: #FBB731;
-  padding: 20px 25px;
+  padding: 18px 25px;
   text-transform: uppercase;
   text-decoration: none;
+  border: 1px solid #FBB731;
+}
+.banner-link:hover {
+background-color: transparent;
+color: #FBB731;
 }
 .banner-title {
   font-size: 60px;
@@ -302,7 +316,7 @@ overflow: hidden;
   margin-bottom: 19px;
   margin-top: 0;
 }
-.footer-item li {
+.footer-list li {
   margin-bottom: 9px;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
@@ -310,10 +324,13 @@ overflow: hidden;
   font-weight: 700;
   line-height: 24px;
 }
-.footer-item a {
+.footer-list a {
   color: #DEDEDE;
   text-decoration: none;
   font-weight: 400;
+}
+.footer-list a:hover {
+  color: #FBB731;
 }
 .footer-item span {
   color: #DEDEDE;
@@ -321,18 +338,147 @@ overflow: hidden;
   font-weight: 400;
   margin-bottom: 2px;
 }
-.footer-tel ul {
+.futer-list-tel {
+margin-top: 0;
+}
+.footer-list-tel li {
+  margin-bottom: 12px;
+}
+.footer-list-tel a {
   font-size: 20px;
   font-weight: 900;
   color: #FBB731;
-  margin-top: 0;
 }
-.footer-tel li {
-  margin-bottom: 12px;
+.footer-list-tel a:hover{
+  color: #ffffff;
 }
 .footer-list {
   padding-left: 0;
   list-style-type: none;
 }
  
- 
+/* Style INDEX */
+.main {
+  background: linear-gradient(180deg, #0C4C7B -100%, #1E2F40 100%);
+}
+.wrapper {
+  max-width: 1180px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.content {
+  color: #FAF9F9;
+  flex: 0 0 580px;
+  padding-top: 170px;
+  padding-bottom: 170px;
+}
+.content-title {
+  font-size: 120px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 120px;
+  margin-bottom: 40px;
+  margin-top: 0; 
+  margin-bottom: 0; 
+}
+.content-title span {
+  color: #FBB731;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 38px;
+  display: block;
+  margin-bottom: 10px;
+}
+.content-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 19px;
+  line-height: 1.4;
+  margin-bottom: 42px;
+}
+.content-link,
+.promo a {
+  color: #1E2F40;
+  background-color: #FBB731;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 20px 45px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+}
+.visual {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+.visual-bg {
+  width: 432px;
+  height: 100%;
+  background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
+}
+.main img {
+  width: 829px;
+  position: absolute;
+  right: -168px;
+}
+.promo {
+  padding-top: 186px;
+  padding-bottom: 46px;
+}
+.promo-left,
+.promo-right {
+  flex: 0 0 49%;
+  color: #fff;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.promo-left {
+  background-image: url(../images/promo-left.png);
+  padding: 116px 50px;
+}
+.promo-right {
+  background-image: url(../images/promo-right.png);
+  padding: 102px 50px;
+}
+.sale {
+  font-size: 14px;
+  font-weight: 900;
+  background: #F37335;
+  padding: 5px 19px;
+  border-radius: 14px;
+  display: inline-block;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+  margin-top: 0; 
+}
+.cost {
+  font-size: 60px;
+  font-weight: 900;
+  margin-bottom: 8px;
+  margin-top: 0;  
+}
+.promo-description {
+  font-family: 'Open Sans', sans-serif;
+  color: #FAF9F9;
+  font-size: 15px;
+  line-height: 24px;
+  margin-bottom: 0;
+}
+.promo-left .promo-description {
+  max-width: 392px;
+}
+.promo-right .promo-description {
+  max-width: 300px;
+  margin-bottom: 20px;
+}
+.free {
+  font-size: 44px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  margin-top: 0; 
+}
