--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,7 @@ header {
   font-size: 20px;
   color: #443737;
   text-decoration: none;
+  transition: 0.3s;
 }
 .header-nav a:hover {
   color: #FFC725;
@@ -109,12 +110,14 @@ header {
   display: flex;
   justify-content: center;
   gap: 7px;
+  
 }
 .breadcrumbs a {
   color: #ffffff;
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
   text-decoration: none;
+  transition: 0.3s;
 }
 .breadcrumbs a:hover{
   color: #FFC725;
@@ -151,18 +154,19 @@ header {
   background-position: center center;
   background-repeat: no-repeat;
   padding: 100px 100px 120px;
-  margin-bottom: 103px;
+  margin-bottom: 80px;
 }
 .banner-link {
-  font-weight: bold;
-  color: #1E2F40;
   font-size: 14px;
-  border-radius: 5px;
-  background-color: #FBB731;
   padding: 18px 25px;
   text-transform: uppercase;
   text-decoration: none;
+  color: #1E2F40;
+  font-weight: bold;  
+  background-color: #FBB731;  
+  border-radius: 5px;
   border: 1px solid #FBB731;
+  transition: 0.5s;
 }
 .banner-link:hover {
 background-color: transparent;
@@ -196,6 +200,9 @@ color: #FBB731;
   margin-bottom: 35px;
   margin-top: 0;
   line-height: 1.6;
+}
+.menu {
+  padding-top: 20px;
 }
 .menu-header {
   display: flex;
@@ -290,6 +297,7 @@ overflow: hidden;
   align-items: center;
   justify-content: center;
   gap: 9px;
+  transition: 0.3s;
 }
 .footer {
   background: #1E2F40;
@@ -323,11 +331,13 @@ overflow: hidden;
   color: #FAF9F9;
   font-weight: 700;
   line-height: 24px;
+  transition: 0.3s;
 }
 .footer-list a {
   color: #DEDEDE;
   text-decoration: none;
   font-weight: 400;
+  transition: 0.3s;
 }
 .footer-list a:hover {
   color: #FBB731;
@@ -348,6 +358,7 @@ margin-top: 0;
   font-size: 20px;
   font-weight: 900;
   color: #FBB731;
+  transition: 0.3s;
 }
 .footer-list-tel a:hover{
   color: #ffffff;
@@ -357,6 +368,29 @@ margin-top: 0;
   list-style-type: none;
 }
  
+.button-up {
+  background-color: #FBB731;
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  color:#1E2F40;
+  text-decoration: none;
+  padding: 5px 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 5px;
+  transition: 1s;
+}
+.button-up:hover {
+  background-color: #F37335;
+}
+.button-up.hidden {
+  opacity: 0;
+}
+.button-up.visible {
+  opacity: 1;
+}
 /* Style INDEX */
 .main {
   background: linear-gradient(180deg, #0C4C7B -100%, #1E2F40 100%);
