--- a/styles/main.css
+++ b/styles/main.css
@@ -151,7 +151,7 @@ header {
 .banner-box {
   background-image: url(../images/banner_1.jpg);
   background-size: cover;
-  background-position: center center;
+  background-position: 0 center;
   background-repeat: no-repeat;
   padding: 100px 100px 120px;
   margin-bottom: 80px;
@@ -516,3 +516,61 @@ margin-top: 0;
   margin-bottom: 10px;
   margin-top: 0; 
 }
+
+/* Responsive */
+@media (min-width: 1001px) {
+      .footer-list + .footert-list-tel {
+        display: none;
+      } 
+}
+
+
+@media (max-width: 1000px) {
+      .container {
+        max-width: 738px;
+      }
+      .header-logo {
+        width: 150px;
+        height: 48px;
+        background-size: contain;
+      }
+      .header-nav {
+        gap: 22px;
+      }
+      .header-item {
+        flex-basis: 75.5%;
+      }
+      .bg {
+        margin-bottom: 72px;
+      }
+      .banner-box {
+        background-position: -80px center;
+        padding:100px 40px 120px;
+      }
+      .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px 15px;
+      }
+      .menu-other {
+        display: flex;
+        width: auto;
+        height: 424px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        padding-bottom: 50px;
+      }
+      .menu-other .menu-grid-item {
+        flex: 0 0 281px;
+      }
+      .menu-other .menu-grid-cover,
+      .menu-other .menu-grid-cover img {
+        height: 320px;
+      }
+      .footer-tel {
+        display: none;
+      }
+      .footer-list + .footer-list-tel {
+        display: block;
+      }
+}
+ 
