--- a/styles/main.css
+++ b/styles/main.css
@@ -516,61 +516,204 @@ margin-top: 0;
   margin-bottom: 10px;
   margin-top: 0; 
 }
+/* Modal */
+.burger {
+  width: 34px;
+  height: 22px;
+  background-image: url(../images/burger.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.modal {
+  background-color: #FFF8DC;
+  max-width: 500px;
+  text-align: center;
+  position: absolute;
+  top: -400px;
+  left: 0;
+  right: 0;
+  margin: 20px auto 0;
+  padding: 40px 30px;
+  box-sizing: border-box;
+  transition: .5s;
+}
+.modal .header-nav {
+  flex-direction: column;
+  align-items: center;
+  gap: 23px;
+  margin: 0;
+}
+.burger-close {
+  width: 22px;
+  height: 22px;
+  background-image: url(../images/close.svg);
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
 
 /* Responsive */
 @media (min-width: 1001px) {
-      .footer-list + .footert-list-tel {
-        display: none;
-      } 
+  .footer-list + .footert-list-tel {
+     display: none;
+  } 
+  .footer-tel-mobil {
+     display: none; 
+  }          
 }
-
-
+@media (min-width: 766px) {
+  .header-burger {
+     display: none;
+  } 
+}
 @media (max-width: 1000px) {
-      .container {
-        max-width: 738px;
-      }
-      .header-logo {
-        width: 150px;
-        height: 48px;
-        background-size: contain;
-      }
-      .header-nav {
-        gap: 22px;
-      }
-      .header-item {
-        flex-basis: 75.5%;
-      }
-      .bg {
-        margin-bottom: 72px;
-      }
-      .banner-box {
-        background-position: -80px center;
-        padding:100px 40px 120px;
-      }
-      .menu-grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 50px 15px;
-      }
-      .menu-other {
-        display: flex;
-        width: auto;
-        height: 424px;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        padding-bottom: 50px;
-      }
-      .menu-other .menu-grid-item {
-        flex: 0 0 281px;
-      }
-      .menu-other .menu-grid-cover,
-      .menu-other .menu-grid-cover img {
-        height: 320px;
-      }
-      .footer-tel {
-        display: none;
-      }
-      .footer-list + .footer-list-tel {
-        display: block;
-      }
+  .container {
+     max-width: 738px;
+  }
+  .header-logo {
+    width: 150px;
+    height: 48px;
+    background-size: contain;
+  }
+  .header-nav {
+    gap: 22px;
+  }
+  .header-item {
+    flex-basis: 75.5%;
+  }
+  .bg {
+    margin-bottom: 72px;
+  }
+  .banner-box {
+    background-position: -80px center;
+    padding: 100px 40px 120px;
+  }
+  .menu-grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 15px;
+  }
+  .menu-other {
+    overflow: hidden;
+    height: 558px;
+  }
+  .menu-other .menu-grid {
+    display: flex;
+    width: auto;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-bottom: 50px;
+  }
+  .menu-other .menu-grid-item {
+    flex: 0 0 281px;
+  }
+  .menu-other .menu-grid-cover,
+  .menu-other .menu-grid-cover img {
+    height: 320px;
+  }
+  .footer-tel {
+    display: none;
+  }
+  .footer-list + .footer-list-tel {
+    display: block;
+  }
 }
- 
+@media (max-width: 765px) {
+  nav {
+    display: none;
+  }
+  .header {
+    gap: 21px;
+  }
+}
+@media (max-width: 567px) {
+  .header {
+    padding-top: 19px;
+    padding-bottom: 19px;
+  }
+  .header-logo {
+    width: 116px;
+    height: 37px;
+  }
+  .breadcrumbs a {
+    font-size: 14px;
+  }
+  .bg {
+    margin-bottom: 33px;
+  }
+  .description {
+    font-size: 12px;
+  }
+  .bg {
+    padding: 55px 0;
+  }
+  .tittle {
+      font-size: 38px;
+  }    
+  .banner-box {
+    background-position: 17% center;
+    padding: 35px 24px 54px;
+    margin-bottom: 40px;
+  }
+  .menu-title {
+    font-size: 27px;
+  }
+  .menu-select {
+    font-size: 12px;
+    flex-basis: 136px;
+    padding: 13px 24px 13px 15px;
+    background-position: 91% center;
+  }
+  .menu-header {
+    margin-bottom: 30px;
+  }
+  .menu-grid {
+    gap: 25px 15px;
+  }
+  .menu-grid-cover {
+    height: 56vw;
+    margin-bottom: 10px;
+  }
+  .menu-grid-cover img {
+    height: 100%;
+  }  
+  .menu-grid-title {
+    font-size: 15px;
+  }
+  .menu-grid-price {
+    font-size: 16px;
+    margin-top: 6px;
+    margin-bottom: 14px;
+  }
+  .menu-grid-btn {
+    padding: 10px 21px;
+  }
+}
+
+@media (max-width: 413px) {
+  .banner-box {
+    background-position: -50px center;
+  }
+}
+@media (max-width: 360px) {
+  .header-logo {
+    width: 116px;
+    height: 37px;
+    background-size: contain;
+  }
+  .menu-grid-title {
+    font-size: 13px;
+  }
+}
+@media (max-width: 320px) {
+  .banner-box {
+    background-position: 25% center;
+  }
+}
