--- a/styles/main.css
+++ b/styles/main.css
@@ -309,13 +309,11 @@ overflow: hidden;
 .footer-box {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
 }
 .footer-logo {
   width: 63px;
   height: 56px;
-}
-.footer-item {
-  flex: 0 0 auto;
 }
 .footer-item h2 {
   font-size: 20px;
@@ -323,6 +321,7 @@ overflow: hidden;
   text-transform: uppercase;
   margin-bottom: 19px;
   margin-top: 0;
+  line-height: 1.5;
 }
 .footer-list li {
   margin-bottom: 9px;
@@ -632,6 +631,12 @@ margin-top: 0;
   .header {
     gap: 21px;
   }
+  .menu-other .container {
+    padding-right: 0; 
+   }
+   .button-up.visible {
+    display: none;
+   }
 }
 @media (max-width: 567px) {
   .header {
@@ -676,6 +681,7 @@ margin-top: 0;
   }
   .menu-grid {
     gap: 25px 15px;
+    margin-bottom: 40px;
   }
   .menu-grid-cover {
     height: 56vw;
@@ -686,6 +692,7 @@ margin-top: 0;
   }  
   .menu-grid-title {
     font-size: 15px;
+    margin-bottom: 5px;
   }
   .menu-grid-price {
     font-size: 16px;
@@ -695,6 +702,50 @@ margin-top: 0;
   .menu-grid-btn {
     padding: 10px 21px;
   }
+  .menu-other {
+    height: 108vw;
+  }
+  .menu-other .menu-grid {
+    padding-bottom: 24vw;
+  }
+  .menu-other .menu-grid-cover{
+    height: 56vw;
+  }
+  .menu-other .menu-grid-cover img {
+    height: 100%;
+  }  
+  .menu-other .menu-grid-item {
+    flex: 0 0 38vw;
+  }  
+  .footer {
+    margin-top: 28px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .footer-list + .footer-list-tel {
+    display: none;
+}
+.footer-tel {
+  display: block;
+}
+.foother-box {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-areas: "logo tel" "link link" "info info";
+  gap: 0;
+}
+.foother-item:nth-child(1) {
+  grid-area: logo;
+}
+.foother-item:nth-child(2) {
+  grid-area: link;
+}
+.foother-item:nth-child(3) {
+  grid-area: info;
+}
+.footer-tel {
+  grid-area: tel;
+}
 }
 
 @media (max-width: 413px) {
