--- a/styles/main.css
+++ b/styles/main.css
@@ -224,7 +224,9 @@ color: #FBB731;
   font-size: 15px;
   font-weight: 400;
   color: #443737;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   flex-basis: 279px;
   background-image: url(../images/arrow.svg);
   background-size: 12.79px 7.75px;
@@ -251,7 +253,8 @@ overflow: hidden;
   width: 100%;
   height: 430px;
   transform: translate(-50%, -50%);
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   text-align: center;
 }
 .menu-grid-title {
