--- a/styles/main.css
+++ b/styles/main.css
@@ -451,7 +451,7 @@ margin-top: 0;
   position: relative;
 }
 .visual-bg {
-  position: static;
+  position: relative;
   width: 432px;
   height: 100%;
   margin-left: 168px;
@@ -680,21 +680,13 @@ margin-top: 0;
     }  
     nav {
       display: none;
-    }
-    /* .modal {
-      background-color: #FFF8DC;
-      max-width: 500px;
-      text-align: center;
-      position: absolute;
-      top: -400px;
-      left: 0;
-      right: 0;
-      margin: 20px auto 0;
-      padding: 40px 30px;
-      box-sizing: border-box;
-      transition: .5s;
-  } */
-  
+    } 
+     .visual-bg {
+    position: relative;
+    width: 333px;
+    height: 100%;
+    left: -204px;
+  }    
   }
 @media (max-width: 765px) {
   /* menu */
@@ -710,22 +702,25 @@ margin-top: 0;
    /* index burger*/
   .main img {
     position: absolute;
-    width: 662px;
-    right: -255px;
-    bottom: -277px;
+    width: 496px;
+    right: -84px;
+    bottom: -815px;
   }
   .visual-bg {
-    position: relative;
+    position: absolute;
     width: 333px;
-    height: 100%;
-    left: -204px;
-  }
+    height: 644px;
+    left: 396px;
+}
   /* index banners */
   .wrapper {    
     display: flex;
     flex-flow: column-reverse;
     height: 100%;
     gap: 22px;
+  }
+  .content {
+    padding-bottom: 0;
   }
  }
 @media (max-width: 586px) {
@@ -780,9 +775,15 @@ margin-top: 0;
   }
   .banner-link {
     padding: 11px 25px;
-    
+}
+.visual-bg {
+  position: relative;
+  width: 432px;
+  height: 100%;
+  margin-left: 168px;
 }
 }
+
 @media (max-width: 567px) {
   /* menu */
   .header {
@@ -921,9 +922,9 @@ margin-top: 0;
   }
   .main img {
     position: absolute;
-    width: 482px;
-    right: -183px;
-    bottom: -146px;
+    width: 298px;
+    right: -54px;
+    bottom: -635px;
   }
   /* index burger */
   .footer-item h2 {
@@ -932,12 +933,32 @@ margin-top: 0;
   .footer-tel {
     margin-bottom: 29px;
   } 
+  .main img {
+    position: absolute;
+    width: 350px;
+    right: -77px;
+    bottom: -684px;
+  }
+  .promo {
+    padding-top: 96px;
+    padding-bottom: 46px;
+}
 }
 @media (max-width: 413px) {
   /* menu */
   .banner-box {
     background-position: -50px center;
   }
+  .main img {
+    position: absolute;
+    width: 298px;
+    right: -77px;
+    bottom: -684px;
+  }
+  .promo {
+    padding-top: 96px;
+    padding-bottom: 46px;
+}
   /* index */
   .visual-bg {
     position: relative;
@@ -951,6 +972,16 @@ margin-top: 0;
     right: 633px;
     bottom: -88px;
   }
+  .main img {
+    position: absolute;
+    width: 298px;
+    right: -77px;
+    bottom: -684px;
+  }
+  .promo {
+    padding-top: 96px;
+    padding-bottom: 46px;
+}
 }
 @media (max-width: 360px) {
   /* menu */
@@ -977,9 +1008,13 @@ margin-top: 0;
   .main img {
     position: absolute;
     width: 298px;
-    right: 647px;
-    bottom: -100px;
+    right: -77px;
+    bottom: -684px;
   }
+  .promo {
+    padding-top: 96px;
+    padding-bottom: 46px;
+}
   /* index  */
   .content-link, .promo a {
     padding: 18px 31px;
